fixed overlap of select menu and container responsiveness

--- a/src/components/Register/PageOne/PageOne.css
+++ b/src/components/Register/PageOne/PageOne.css
@@ -19,3 +19,7 @@
     padding: 2px 6px;
     border-radius: 30px;
 }
+.next-btn{
+    margin-top: 1rem;
+    margin-bottom: 3rem;
+}
