--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
   }
-
+  
   .card-title{
     font-size: 2.3rem;
     background: linear-gradient(90deg, rgba(80,56,199,1) 42%, rgba(160,35,191,1) 57%);
@@ -24,11 +24,15 @@
     display: none;
   }
   
+  
   @media (max-width: 767px){
-
+    .submit-btn-2{
+      margin-top: 10rem;
+    }
     
     .registered-text{
       display: flex;
+      z-index: 0;
       transform: translateY(4rem);
     }
     
